Add link to Home page

--- a/web/src/components/user-auth/user-auth.css
+++ b/web/src/components/user-auth/user-auth.css
@@ -12,7 +12,7 @@
   position: relative;
 }
 
-.user-auth .action-row a {
+.user-auth .action-row .link {
   position: absolute;
   bottom: 0;
   right: 0;
