Create card layout for vSwitch servers

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -13,3 +13,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.app-card.is-new {
+  opacity: 70%;
+  font-size: 1.2em;
+}
+
+.app-card .card-header .card-header-icon {
+  padding: 0.75rem 0.35rem;
+}
